// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewReview /> moving the mouse over the stars changes the width 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn-primary btn-md"
      data-testid="toggle-form"
      type="button"
    >
      write a review
    </button>
  </div>
  <form
    class="collapse"
    data-testid="new"
    novalidate=""
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="authorName"
      >
        Name
      </label>
      <input
        class="form-control"
        data-testid="name"
        id="authorName"
        required=""
        type="name"
        value=""
      />
      <div
        class="invalid-feedback"
      >
        Please provide a name
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
      >
        Your rating
      </label>
      <span
        data-testid="mouse-stars"
      >
        <span>
          <img
            alt=""
            class="undefined undefined"
            src=""
          />
          <img
            alt=""
            class="undefined undefined"
            data-testid="rating-star"
            src=""
            style="width: 74px;"
          />
        </span>
      </span>
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="reviewBody"
      >
        Your review
      </label>
      <textarea
        class="form-control"
        data-testid="body"
        id="reviewBody"
        required=""
        rows="4"
      />
      <div
        class="invalid-feedback"
      >
        Review body can't be empty
      </div>
      <small
        class="form-text"
      >
        <small>
          Your review is subject to terms and services. If users find your review offensive, it will be removed.
        </small>
      </small>
    </div>
    <div
      class="form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          type="checkbox"
          value="false"
        />
        <label
          class="form-check-label"
          title=""
        >
          I bought this product
        </label>
      </div>
    </div>
    <button
      class="btn btn-outline-primary btn-sm"
      data-testid="submit"
      type="submit"
    >
      submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`<NewReview /> toggle the form resets the state values if not submitted 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn-primary btn-md"
      data-testid="toggle-form"
      style=""
      type="button"
    >
      write a review
    </button>
  </div>
  <form
    class="collapsing"
    data-testid="new"
    novalidate=""
    style=""
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="authorName"
      >
        Name
      </label>
      <input
        class="form-control"
        data-testid="name"
        id="authorName"
        required=""
        type="name"
        value=""
      />
      <div
        class="invalid-feedback"
      >
        Please provide a name
      </div>
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
      >
        Your rating
      </label>
      <span
        data-testid="mouse-stars"
      >
        <span>
          <img
            alt=""
            class="undefined undefined"
            src=""
          />
          <img
            alt=""
            class="undefined undefined"
            data-testid="rating-star"
            src=""
            style="width: 0px;"
          />
        </span>
      </span>
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="reviewBody"
      >
        Your review
      </label>
      <textarea
        class="form-control"
        data-testid="body"
        id="reviewBody"
        required=""
        rows="4"
      />
      <div
        class="invalid-feedback"
      >
        Review body can't be empty
      </div>
      <small
        class="form-text"
      >
        <small>
          Your review is subject to terms and services. If users find your review offensive, it will be removed.
        </small>
      </small>
    </div>
    <div
      class="form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          type="checkbox"
          value="false"
        />
        <label
          class="form-check-label"
          title=""
        >
          I bought this product
        </label>
      </div>
    </div>
    <button
      class="btn btn-outline-primary btn-sm"
      data-testid="submit"
      type="submit"
    >
      submit
    </button>
  </form>
</DocumentFragment>
`;
